assets/styles/src/style.css
/* ... */
			.theme-item__hasimg h3 .text{
				transition: filter .3s ease-in;
			}

			@media (min-width: 721px){
				.theme-item__hasimg .theme-item--hoverimg{
					filter: blur( 3px );
					transition: filter .2s 0s ease-in, opacity .2s .2s ease-in;
				}
				.theme-item--hoverimg.active{
					opacity: 1;
					filter: blur( 0px );
					transition: filter .2s .15s ease-in, opacity .2s ease-in;
				}
				.theme-item__hasimg.hoverimg-active h3 .text{
					filter: blur( 3px );
					overflow: visible;
				}
			}

		.dc-hoverimg-trigger{
			display: inline-block;
			vertical-align: top;
			margin-right: .2em;
			border: 1px solid #000000;
			width: 20px;
	    /* height: 0.65em; */
			height: 12px;
	    top: 0.35em;
	    position: absolute;
	    right: 100%;
	    margin-right: 0.65rem;
			cursor: crosshair;

		}

			.dc-hoverimg-trigger:after{
				content: 'IMG';
				display: inline-block;
				vertical-align: top;
				text-align: center;
				width: 100%;
				font-size: 8px;
				letter-spacing: 0.03em;
				line-height: 1.65em;
			}


			.theme__networks .dc-hoverimg-trigger{
				border-color: #FFFFFF;
			}

	.theme-item__work{
		margin-bottom: 2.5em;
		position: relative;
		transition: filter .3s ease-in;
	}
		.theme-item__work img{
			display: block;
			width: 100%;
		}
			.theme__networks .theme-item__work img{
				display: block;
				width: 100%;
			}
		.theme-item__work h2{
			margin: 0 0 .63em 0;
			transform-origin: top left;
		}
		.theme-item__work:hover h2{
			transition: filter .3s ease-in;
		}

		@media (min-width: 721px){
			.theme-item__work img{
				transition: filter .3s ease-in;
			}
			.theme-item__work:hover img{
				filter: blur( 3px );
			}
			.theme-item__work:first-child h2{
				display: none;
			}
		}

.theme .theme--section__research ul{
	list-style-type: none;
	padding-left: 1.7em;
}
.theme .theme--section__research ul li{
	position: relative;
}
.theme .theme--section__research ul li:before{
	content: attr(data-li-number) " ";
	width: 1.7em;
	display: block;
	position: absolute;
	top: 0;
	right: 100%;
}
.theme .theme--section__notes ul,
.news-items{
	padding-left: 1.7em;
}
.theme .theme--section__notes ul li,
.news-items li{
	position: relative;
}
.theme .theme--section__notes ul li:before,
.news-items li:before{
	content: '• ';
	display: inline-block;
	position: absolute;
	left: -1.42rem;
	top: -0.35rem;
	font-size: 1.6em;
	line-height: 1;
}
	.theme[data-proportion="small"] .theme--section__notes ul li:before,
	.theme[data-proportion="tiny"] .theme--section__notes ul li:before,
	.theme[data-proportion="small"] .news-items li:before,
	.theme[data-proportion="tiny"] .news-items li:before{
		left: -0.85rem;
		top: -0.2rem;
	}
	.news-items .theme-item__post:before{
		content: '→ ';
		font-size: .9em;
    top: 0.1rem;
		left: -1.36rem;
	}
	.news-items .theme-item__dc_social_twitter:before,
	.news-items .theme-item__dc_social_instagram:before{
		content: '• ';
		top: -0.2em;
    left: -1.35rem;
		font-size: 1.6em;
	}
		.about--pane[data-proportion="small"] .news-items li:before{
			left: -1.85em;
		}
			.about--pane[data-proportion="small"] .news-items .theme-item__dc_social_twitter:before,
			.about--pane[data-proportion="small"] .news-items .theme-item__dc_social_instagram:before{
				left: -1.05em;
			}
	.theme .theme--section__notes ul li.theme-item__hasimg:before,
	.news-items li.theme-item__hasimg:before{
		display: none;
	}
	.theme .theme--section__research{
		margin-top: 0.6em;
	}
	.theme .theme--section__research ul li{
		margin-bottom: 0.35em;
	}
	.theme .theme--section__research ul li h3{
		display: inline;
	}
	.theme .theme--section__notes ul li h3,
	.news-items li h3{
		margin-bottom: 0.7em;
	}
		.theme--section__research a{
			filter: blur(0);
			transition: .3s ease-in;
		}
		@media (min-width: 721px){
		 .theme--section__research a:hover{
			 filter: blur(3px);
		 }
	 }

.theme[data-proportion="large"] .theme--section__description,
.about--pane[data-proportion="large"].about--content .wysiwyg{
	width: 66.66%;
}
	.theme[data-proportion="large"] .theme-item__work img{
		box-sizing: border-box;
		position: relative;
		left: 1.4em;
		width: calc(100% - 1.4em);
	}
	.theme[data-proportion="large"] .theme-item__work h2{
		position: absolute;
		bottom: -1.23em;
		transform: rotate(-90deg);
		transform-origin: top left;
	}

.theme[data-proportion="small"],
.theme[data-proportion="tiny"],
.about--pane[data-proportion="small"],
.about--pane[data-proportion="tiny"]{
	font-size: .6em;
}
.theme[data-proportion="small"] .theme--leader h1,
.theme[data-proportion="tiny"] .theme--leader h1{
	position: relative;
	top: .09rem;
}
	.theme[data-proportion="small"] .theme--section,
	.theme[data-proportion="small"] .theme-item__work{
		margin-bottom: 2em;
	}
	.theme[data-proportion="small"] .theme-item__hasimg .theme-item--hoverimg{
		padding: 0;
    width: calc(100% + 1.6rem);
    margin-left: -0.85em;
		top: 1.5rem;
		transform: translate( -50%, 0 );
	}

.theme[data-proportion="tiny"] .theme--leader{
	border-bottom: 1px solid #000000;
	padding-bottom: 0.15em;
	margin-bottom: 0.5em;
	padding-top: 2.65em;
}
.theme[data-proportion="tiny"].theme__networks .theme--leader{
	border-bottom-color: #FFFFFF;
}

.theme[data-proportion="tiny"] .theme--section{
	margin-bottom: 0;
}
.theme[data-proportion="tiny"] .theme-item{
	line-height: 1.35;
}
.theme[data-proportion="tiny"] .theme-item__work,
.theme[data-proportion="tiny"] .theme-item__work h2{
	margin-bottom: 0;
}

.theme[data-proportion="tiny"] .theme--section__description{
	display: none;
}
.theme[data-proportion="tiny"] .theme-item__work img{
	opacity: 0;
	pointer-events: none;
	height: 0;
	width: 0;
	filter: blur(3px);
	position: absolute;
	transition: filter .2s .15s ease-in, opacity .2s ease-in;
}
	.theme[data-proportion="tiny"] .theme-item__work:hover{
		filter: blur(0px);
		z-index: 2;
	}
/* ... */

